--- a/FlexEditor/imgui.ini
+++ b/FlexEditor/imgui.ini
@@ -9,7 +9,7 @@ Size=192,205
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=900,29
+Pos=898,28
 Size=380,691
 Collapsed=0
 
@@ -172,7 +172,8 @@ Size=319,900
 Collapsed=0
 
 [Window][Down]
-Pos=316,495
+ViewportPos=742,741
+ViewportId=0xBCCD3F05
 Size=582,225
 Collapsed=0
 
@@ -182,7 +183,7 @@ Size=582,464
 Collapsed=0
 
 [Window][Content Browser]
-ViewportPos=113,165
+ViewportPos=411,271
 ViewportId=0x371352B7
 Size=314,691
 Collapsed=0
