implemented UUID, basic ECS structure, and reflection
- added automatically generating UUID class
- added the ECS hierarchy (scene > gameobject > component)
- added a basic reflection system
- updated editor project to test the new ECS and reflection system

--- a/FlexEditor/imgui.ini
+++ b/FlexEditor/imgui.ini
@@ -9,9 +9,10 @@ Size=192,205
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=898,28
-Size=380,691
+Pos=970,29
+Size=310,691
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Test]
 Pos=545,195
@@ -34,7 +35,7 @@ DockId=0x3BC79352,2
 Pos=0,21
 Size=658,879
 Collapsed=0
-DockId=0x8B93E3BD,1
+DockId=0x00000009,1
 
 [Window][Stacked 1]
 Pos=635,347
@@ -172,21 +173,22 @@ Size=319,900
 Collapsed=0
 
 [Window][Down]
-ViewportPos=742,741
-ViewportId=0xBCCD3F05
-Size=582,225
+Pos=314,548
+Size=654,172
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Viewport]
-Pos=316,28
-Size=582,464
+Pos=314,29
+Size=654,517
 Collapsed=0
+DockId=0x00000009,0
 
 [Window][Content Browser]
-ViewportPos=411,271
-ViewportId=0x371352B7
-Size=314,691
+Pos=0,29
+Size=312,691
 Collapsed=0
+DockId=0x00000001,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -320,9 +322,15 @@ Column 0  Weight=0.8451
 Column 1  Weight=1.1549
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
-  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
-  DockNode  ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
-DockSpace   ID=0x8B93E3BD Pos=216,268 Size=1280,691 CentralNode=1
-DockSpace   ID=0xA086D808 Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
+DockSpace       ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=112,164 Size=1280,691 Split=X
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=968,691 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=312,691 Selected=0xBF096F38
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=654,691 Split=Y
+      DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=654,174 CentralNode=1 Selected=0x13926F0B
+      DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=654,172 Selected=0x2DAC0363
+  DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=310,691 Selected=0xE87781F4
+DockSpace       ID=0xA086D808 Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
 
